@@ -35,6 +35,8 @@ VersionInfoProperties versionInfoProperties, SecurityStateBean securityStateBean
 ** countStepExecutionsForJobExecution
 ** stopAll
 ** getStepNamesForJob
+* The following deprecated `Converters` have been removed from SCDF: `AbstractDateTimeConverter`, `DateToStringConverter`, and `StringToDateConverter`.   : Use the converters provided by Spring Batch.
+
 
 === Breaking Changes
 Announce deprecated changes here
